Replace Paperclip invokation with new rewritten implementation