@@ -4,7 +4,7 @@ import com.google.common.collect.ImmutableList;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import io.canvasmc.horizon.instrument.JvmAgent;
-import io.canvasmc.horizon.instrument.PaperclipTransformer;
+import io.canvasmc.horizon.instrument.patch.ServerPatcherEntrypoint;
 import io.canvasmc.horizon.plugin.EntrypointLoader;
 import io.canvasmc.horizon.plugin.data.HorizonMetadata;
 import io.canvasmc.horizon.plugin.data.HorizonMetadataDeserializer;
@@ -20,16 +20,16 @@ import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
 import org.yaml.snakeyaml.constructor.SafeConstructor;
 
-import java.io.*;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.lang.instrument.Instrumentation;
-import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 
 /**
@@ -57,7 +57,7 @@ public class Horizon {
     private @NonNull
     final Instrumentation instrumentation;
     private @NonNull
-    final File paperclipJar;
+    final FileJar paperclipJar;
     private List<HorizonPlugin> plugins;
     private PaperclipVersion paperclipVersion;
 
@@ -65,13 +65,15 @@ public class Horizon {
         this.options = options;
         this.version = version;
         this.instrumentation = instrumentation;
-        this.paperclipJar = (File) options.valueOf("serverjar");
 
         INSTANCE = this;
         try {
+            File paperclipIOFile = (File) options.valueOf("serverjar");
+            this.paperclipJar = new FileJar(paperclipIOFile, new JarFile(paperclipIOFile));
+
             INTERNAL_PLUGIN = new HorizonPlugin(
                 "horizon",
-                new FileJar(this.paperclipJar, new JarFile(this.paperclipJar)),
+                this.paperclipJar,
                 new HorizonMetadata(
                     "horizon",
                     this.version,
@@ -93,34 +95,6 @@ public class Horizon {
             Logger.error(thrown);
             System.exit(1);
         }
-    }
-
-    private static void preparePaperclipLaunch() {
-        // with paperclip, it contains System exits... this has to be removed
-        JvmAgent.addTransformer(new PaperclipTransformer(PAPERCLIP_MAIN.replace('.', '/')));
-
-        // we also launch the game ourselves, so we need this as patch only
-        System.setProperty("paperclip.patchonly", "true");
-
-        try {
-            JvmAgent.addJar(Horizon.INSTANCE.getPaperclipJar().toPath());
-        } catch (final IOException exception) {
-            throw new IllegalStateException("Unable to add paperclip jar to classpath!", exception);
-        }
-
-        // launch paperclip for patching
-        try {
-            final Class<?> paperclipClass = Class.forName(PAPERCLIP_MAIN);
-            paperclipClass
-                .getMethod("main", String[].class)
-                .invoke(null, (Object) new String[0]);
-        } catch (ClassNotFoundException | NoSuchMethodException |
-                 InvocationTargetException | IllegalAccessException thrown) {
-            throw new IllegalStateException("Unable to execute paperclip jar!", thrown);
-        }
-
-        // cleanup the patchonly flag
-        System.getProperties().remove("paperclip.patchonly");
     }
 
     /**
@@ -147,7 +121,7 @@ public class Horizon {
      *
      * @return the server jar
      */
-    public @NonNull File getPaperclipJar() {
+    public @NonNull FileJar getPaperclipJar() {
         return paperclipJar;
     }
 
@@ -191,64 +165,43 @@ public class Horizon {
         Logger.info("Preparing Minecraft server");
         this.plugins = ImmutableList.copyOf(EntrypointLoader.INSTANCE.init());
 
-        final List<String> libraries = new ArrayList<>();
-        final AtomicReference<String> game = new AtomicReference<>();
-
-        prepareHorizonServer(game, libraries);
-
+        final URL[] unpacked = prepareHorizonServer();
         final List<Path> initalClasspath = new ArrayList<>();
-        final Path gameJar = Paths.get(game.get());
 
         for (HorizonPlugin plugin : plugins) {
             // add all plugins to initial classpath
             initalClasspath.add(plugin.file().ioFile().toPath());
         }
 
-        try {
-            JvmAgent.addJar(gameJar);
-            initalClasspath.add(gameJar);
-
-            Logger.trace("Added game jar: {}", gameJar);
-        } catch (final IOException exception) {
-            Logger.error(exception, "Failed to resolve game jar: {}", gameJar);
-            System.exit(1);
-            return;
-        }
-
-        libraries.forEach(path -> {
-            if (!path.endsWith(".jar")) return;
-
+        for (URL url : unpacked) {
             try {
-                Path libPath = Paths.get(path);
-                JvmAgent.addJar(libPath);
-                initalClasspath.add(libPath);
-
-                Logger.trace("Added game library jar: {}", path);
-            } catch (final IOException exception) {
-                Logger.error("Failed to resolve game library jar: {}", path);
-                Logger.error(exception);
+                Path asPath = Path.of(url.toURI());
+                JvmAgent.addJar(asPath);
+                initalClasspath.add(asPath);
+            } catch (URISyntaxException | IOException e) {
+                throw new RuntimeException("Couldn't unpack and attach jar: " + url, e);
             }
-        });
+        }
 
         try {
             initalClasspath.add(Path.of(Horizon.class.getProtectionDomain().getCodeSource().getLocation().toURI()));
+
+            MixinLaunch.launch(
+                new MixinLaunch.LaunchContext(
+                    providedArgs,
+                    initalClasspath.stream()
+                        .map(Path::toAbsolutePath)
+                        .toList().toArray(new Path[0]),
+                    Path.of(unpacked[0].toURI())
+                )
+            );
         } catch (URISyntaxException e) {
             throw new RuntimeException("Couldn't locate self for setting up inital classpath", e);
         }
-
-        MixinLaunch.launch(
-            new MixinLaunch.LaunchContext(
-                providedArgs,
-                initalClasspath.stream()
-                    .map(Path::toAbsolutePath)
-                    .toList().toArray(new Path[0]),
-                gameJar
-            )
-        );
     }
 
-    private void prepareHorizonServer(AtomicReference<String> game, List<String> libraries) {
-        final Path serverJarPath = getPaperclipJar().toPath();
+    private URL @NonNull [] prepareHorizonServer() {
+        final Path serverJarPath = getPaperclipJar().ioFile().toPath();
         boolean exists;
         try (final JarFile jarFile = new JarFile(serverJarPath.toFile())) {
             exists = jarFile.getJarEntry("version.json") != null;
@@ -261,9 +214,6 @@ public class Horizon {
         }
 
         try {
-            // TODO - i dont want to invoke paperclip directly, this is stupid
-            preparePaperclipLaunch();
-
             final File file = serverJarPath.toFile();
             if (!file.exists()) throw new FileNotFoundException(file.getAbsolutePath());
             if (file.isDirectory() || !file.getName().endsWith(".jar"))
@@ -277,43 +227,14 @@ public class Horizon {
                     PaperclipVersion.class
                 );
 
-                try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(jarFile.getInputStream(jarFile.getJarEntry("META-INF/versions.list")))
-                )) {
-                    reader.lines()
-                        .map(line -> line.split("\t", 3))
-                        .filter(parts -> parts.length == 3)
-                        .findFirst()
-                        .ifPresent(parts -> {
-                            String path = parts[2];
-                            String[] split = path.split("/", 2);
-
-                            String serverVer = split[1].split("-", 2)[0];
-
-                            game.set("./versions/" + path);
-
-                            Logger.info("Loading {} {} with Horizon version {}",
-                                Character.toUpperCase(serverVer.charAt(0)) + serverVer.substring(1),
-                                getPaperclipVersion().id(),
-                                getVersion()
-                            );
-                        });
+                try {
+                    JvmAgent.addJar(Horizon.INSTANCE.getPaperclipJar().ioFile().toPath());
+                } catch (final IOException exception) {
+                    throw new IllegalStateException("Unable to add paperclip jar to classpath!", exception);
                 }
 
-                JarEntry entry = jarFile.getJarEntry("META-INF/libraries.list");
-                if (entry != null) {
-                    try (BufferedReader reader = new BufferedReader(
-                        new InputStreamReader(jarFile.getInputStream(entry)))
-                    ) {
-                        String line;
-                        while ((line = reader.readLine()) != null) {
-                            String[] parts = line.split("\t", 3);
-                            if (parts.length == 3) {
-                                libraries.add("libraries/" + parts[2]);
-                            }
-                        }
-                    }
-                }
+                // unpack libraries and patch
+                return ServerPatcherEntrypoint.setupClasspath();
             }
         } catch (Throwable thrown) {
             throw new RuntimeException("Couldn't prepare server", thrown);
